--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main class="container">
         <section class="sedans-section">
-            <header class="product-section__header"><img src="images/icon-sedans.svg" alt="Sedan vehicle icon"></header>
+            <h2 class="product-section__header"><img src="images/icon-sedans.svg" alt="Sedan vehicle icon"></h2>
             <article class="product-section__article">
                 <h2 class="product-section__title">SEDANS</h2>
                 <p class="product-section__info-text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
@@ -23,7 +23,7 @@
             </footer>
         </section>
         <section class="suvs-section">
-            <header class="product-section__header"><img src="images/icon-suvs.svg" alt="SUV vehicle icon"></header>
+            <h2 class="product-section__header"><img src="images/icon-suvs.svg" alt="SUV vehicle icon"></h2>
             <article class="product-section__article">
                 <h2 class="product-section__title">SUVS</h2>
                 <p class="product-section__info-text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vocation and off-road adventures.</p>
@@ -33,7 +33,7 @@
             </footer>
         </section>
         <section class="luxury-section">
-            <header class="product-section__header"><img src="images/icon-luxury.svg" alt="Luxury vehicle icon"></header>
+            <h2 class="product-section__header"><img src="images/icon-luxury.svg" alt="Luxury vehicle icon"></h2>
             <article class="product-section__article">
                 <h2 class="product-section__title">LUXURY</h2>
                 <p class="product-section__info-text">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
